src/test/deca/syntax/valid/homemade/parser/test/test_pars_val_class_decl_field_protect_var_simpl_egal.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour une class, decl field 
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

class iden {
    protected int iden1 = 6495;
}