src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_oubli_virgule_field_mult.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 12 : Erreur (eoubli ",")
//    
//
// Historique:
//    cree le 04/01/2023

class iden1 extends iden3{
    protected int x= 89 iden = 456;
}